adding defaults and lookups

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,21 +1,21 @@
 ---
-liagent::ghostname: ~
-liagent::gproto: ~
-liagent::gport: ~
-liagent::gssl: ~
-liagent::gssl_ca_path: ~
-liagent::greconnect: ~
-liagent::gcentral_config: ~
-liagent::gdebug_level: ~
-liagent::gstats_period: ~
-liagent::gsmart_stats: ~
-liagent::gmax_disk_buffer: ~
-liagent::gfilelog: ~
-liagent::gsyslog: ~
-liagent::gdirectory: ~
-liagent::ginclude: ~
+liagent::hostname: 'loginsight.localdomain'
+liagent::proto: 'cfapi'
+liagent::port: '9543'
+liagent::ssl: 'yes'
+liagent::ssl_ca_path: ~
+liagent::reconnect: ~
+liagent::central_config: ~
+liagent::debug_level: ~
+liagent::stats_period: ~
+liagent::smart_stats: ~
+liagent::max_disk_buffer: ~
+liagent::filelog: 'filelog'
+liagent::logtype: ~
+liagent::directory: ~
+liagent::include: ~
 liagent::package_type: ~
-liagent::gauto_update: ~
+liagent::auto_update: ~
 liagent::service_manage: ~
 liagent::service_ensure: ~
 liagent::service_enable: ~
