--- a/data/RedHat-family.yaml
+++ b/data/RedHat-family.yaml
@@ -1,3 +1,4 @@
+liagent::config_file: '/var/lib/loginsight-agent/liagent.ini'
 liagent::logtype: 'syslog'
 liagent::directory: '/var/log'
 liagent::include: 'include=messages;messages.?;syslog;syslog.?'
