--- a/data/RedHat-family.yaml
+++ b/data/RedHat-family.yaml
@@ -3,3 +3,4 @@ liagent::logtype: 'syslog'
 liagent::directory: '/var/log'
 liagent::include: 'include=messages;messages.?;syslog;syslog.?'
 liagent::package_type: 'rpm'
+liagent::package_manage: 'true'
